added buttons. Still need to be put in individual relative views

--- a/app/src/main/res/layout/activity_gurps.xml
+++ b/app/src/main/res/layout/activity_gurps.xml
@@ -7,7 +7,7 @@
     tools:context="combobreaker.rpgassistant.GURPS">
 
     <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
-        android:fitsSystemWindows="true" android:layout_height="@dimen/app_bar_height"
+        android:fitsSystemWindows="true" android:layout_height="80sp"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout android:id="@+id/toolbar_layout"
@@ -23,10 +23,5 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_gurps" />
-
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin" app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
