--- a/app/src/main/res/layout/content_gurps.xml
+++ b/app/src/main/res/layout/content_gurps.xml
@@ -13,222 +13,277 @@ android:layout_height="match_parent" tools:context="combobreaker.rpgassistant.GU
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <!-- STRENGTH -->
-
+    <!-- mainstats -->
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/strengthwrapper">
+        android:id="@+id/mainstatswindow">
 
-        <Button
-            android:id="@+id/stplus"
-            android:layout_width="70sp"
+        <!-- STRENGTH -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/stp" >
-        </Button>
+            android:id="@+id/strengthwrapper">
+
+            <Button
+                android:id="@+id/stplus"
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/stp">
+            </Button>
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/strengthStat"
+                android:id="@+id/stview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/stplus"
+                android:layout_toEndOf="@+id/stplus"
+                android:textAlignment="center"
+                android:background="@drawable/outlinebox" />
+            <Button
+                android:id="@+id/stminus"
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/stview"
+                android:layout_toEndOf="@+id/stview"
+                android:text="@string/stm" >
+            </Button>
+        </RelativeLayout>
+
+        <!-- HIT POINTS -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/strengthwrapper"
+            android:id="@+id/hpwrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/hpp"
+                android:id="@+id/hpplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/hitpointStat"
+                android:id="@+id/hpview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/hpplus"
+                android:layout_toEndOf="@+id/hpplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/hpview"
+                android:text="@string/hpm"
+                android:id="@+id/hpminus" />
+
+        </RelativeLayout>
+
+        <!-- DEXTERITY -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/strengthwrapper"
+            android:id="@+id/dxwrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/dxp"
+                android:id="@+id/dxplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/dexterityStat"
+                android:id="@+id/dxview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/dxplus"
+                android:layout_toEndOf="@+id/dxplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/dxview"
+                android:text="@string/dxm"
+                android:id="@+id/dxminus" />
+
+        </RelativeLayout>
+
+        <!-- WILLPOWER -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/dxwrapper"
+            android:layout_below="@+id/hpwrapper"
+            android:id="@+id/willwrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/wip"
+                android:id="@+id/willplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/willpowerStat"
+                android:id="@+id/willview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/willplus"
+                android:layout_toEndOf="@+id/willplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/willview"
+                android:text="@string/wim"
+                android:id="@+id/willminus" />
+
+        </RelativeLayout>
+
+        <!-- IQ Points -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dxwrapper"
+            android:id="@+id/iqwrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/iqp"
+                android:id="@+id/iqplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/iqStat"
+                android:id="@+id/iqview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/iqplus"
+                android:layout_toEndOf="@+id/iqplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/iqview"
+                android:text="@string/iqm"
+                android:id="@+id/iqminus" />
+
+        </RelativeLayout>
+
+        <!-- PERCEPTION -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/iqwrapper"
+            android:layout_below="@+id/willwrapper"
+            android:id="@+id/pewrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/pep"
+                android:id="@+id/perplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/iqStat"
+                android:id="@+id/perview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/perplus"
+                android:layout_toEndOf="@+id/perplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/perview"
+                android:text="@string/pem"
+                android:id="@+id/perminus" />
+
+        </RelativeLayout>
+
+        <!-- HEALTH -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iqwrapper"
+            android:id="@+id/htwrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/htp"
+                android:id="@+id/htplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/iqStat"
+                android:id="@+id/htview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/htplus"
+                android:layout_toEndOf="@+id/htplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/htview"
+                android:text="@string/htm"
+                android:id="@+id/htminus" />
+
+        </RelativeLayout>
+
+        <!-- FATIGUE POINTS -->
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/htwrapper"
+            android:layout_below="@+id/pewrapper"
+            android:id="@+id/fpwrapper">
+
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:text="@string/fpp"
+                android:id="@+id/fpplus" />
+            <TextView
+                android:layout_width="50sp"
+                android:layout_height="fill_parent"
+                android:text="@string/iqStat"
+                android:id="@+id/fpview"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/fpplus"
+                android:layout_toEndOf="@+id/fpplus"/>
+            <Button
+                android:layout_width="70sp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/fpview"
+                android:text="@string/fpm"
+                android:id="@+id/fpminus" />
+
+        </RelativeLayout>
+
+    </RelativeLayout> <!-- endof mainstats -->
+
+    <!-- current hpfp -->
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/mainstatswindow">
+
+
         <TextView
-            android:layout_width="50sp"
-            android:layout_height="fill_parent"
-            android:text="@string/strengthStat"
-            android:id="@+id/stview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/stplus"
-            android:layout_toEndOf="@+id/stplus"/>
-        <Button
-            android:id="@+id/stminus"
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/stview"
-            android:layout_toEndOf="@+id/stview"
-            android:text="@string/stm" >
-        </Button>
-    </RelativeLayout>
+            android:text="@string/currenthpfp"
+            android:textSize="25sp"
+            android:textColor="#000000" />
 
-    <!-- HIT POINTS -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/strengthwrapper"
-        android:id="@+id/hpwrapper">
-
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:text="@string/hpp"
-            android:id="@+id/hpplus" />
-        <TextView
-            android:layout_width="50sp"
-            android:layout_height="fill_parent"
-            android:text="@string/hitpointStat"
-            android:id="@+id/hpview"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/hpplus"
-            android:layout_toEndOf="@+id/hpplus"/>
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/hpview"
-            android:text="@string/hpm"
-            android:id="@+id/hpminus" />
-
-    </RelativeLayout>
-
-    <!-- DEXTERITY -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hpwrapper"
-        android:id="@+id/dxwrapper">
-
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:text="@string/dxp"
-            android:id="@+id/dxplus" />
-        <TextView
-            android:layout_width="50sp"
-            android:layout_height="fill_parent"
-            android:text="@string/dexterityStat"
-            android:id="@+id/dxview"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/dxplus"
-            android:layout_toEndOf="@+id/dxplus"/>
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/dxview"
-            android:text="@string/dxm"
-            android:id="@+id/dxminus" />
-
-    </RelativeLayout>
-
-    <!-- WILLPOWER -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dxwrapper"
-        android:id="@+id/willwrapper">
-
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:text="@string/wip"
-            android:id="@+id/willplus" />
-        <TextView
-            android:layout_width="50sp"
-            android:layout_height="fill_parent"
-            android:text="@string/willpowerStat"
-            android:id="@+id/willview"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/willplus"
-            android:layout_toEndOf="@+id/willplus"/>
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/willview"
-            android:text="@string/wim"
-            android:id="@+id/willminus" />
-
-    </RelativeLayout>
-
-    <!-- IQ Points -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/willwrapper"
-        android:id="@+id/iqwrapper">
-
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:text="@string/iqp"
-            android:id="@+id/iqplus" />
-        <TextView
-            android:layout_width="50sp"
-            android:layout_height="fill_parent"
-            android:text="@string/iqStat"
-            android:id="@+id/iqview"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/iqplus"
-            android:layout_toEndOf="@+id/iqplus"/>
-        <Button
-            android:layout_width="70sp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/iqview"
-            android:text="@string/iqm"
-            android:id="@+id/iqminus" />
-
-    </RelativeLayout>
-
-    <!-- PERCEPTION -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iqwrapper"
-        android:id="@+id/pewrapper">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pep"
-            android:id="@+id/perplus" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/perplus"
-            android:text="@string/pem"
-            android:id="@+id/perminus" />
-
-    </RelativeLayout>
-
-    <!-- HEALTH -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/pewrapper"
-        android:id="@+id/htwrapper">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/htp"
-            android:id="@+id/htplus" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/htplus"
-            android:text="@string/htm"
-            android:id="@+id/htminus" />
-
-    </RelativeLayout>
-
-    <!-- FATIGUE POINTS -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/htwrapper"
-        android:id="@+id/fpwrapper">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/fpp"
-            android:id="@+id/fpplus" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/fpplus"
-            android:text="@string/fpm"
-            android:id="@+id/fpminus" />
-
-    </RelativeLayout>
+    </RelativeLayout> <!-- endof current hpfp -->
 
 </RelativeLayout>
 </ScrollView>
