--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:onClick="startDice"/>
 
     <Button
         android:layout_width="wrap_content"
