--- a/app/src/main/res/layout/activity_dice_emulator.xml
+++ b/app/src/main/res/layout/activity_dice_emulator.xml
@@ -8,58 +8,171 @@
     tools:context="combobreaker.rpgassistant.diceEmulator">
 
     <!-- d2 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d2layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/d2" />
+        android:id="@+id/d2"
+        android:text="@string/d2"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/d2view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
     <!-- d3 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d3layout"
+        android:layout_below="@+id/d2layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/d3"
-        android:layout_below="@id/d2"/>
+        android:text="@string/d3"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/d3view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
     <!-- d4 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d4layout"
+        android:layout_below="@+id/d3layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/d4"
-        android:layout_below="@id/d3"/>
+        android:text="@string/d4"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/d4view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
     <!-- d6 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d6layout"
+        android:layout_below="@+id/d4layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/d6"
-        android:layout_below="@id/d4"/>
+        android:text="@string/d6"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/d6view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
     <!-- d8 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d8layout"
+        android:layout_below="@+id/d6layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/d8"
-        android:layout_below="@id/d6"/>
+        android:text="@string/d8"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/d8view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
     <!-- d10 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d10layout"
+        android:layout_below="@+id/d8layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/d10"
-        android:layout_below="@id/d8"/>
+        android:text="@string/d10"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/d10view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
     <!-- d20 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d20layout"
+        android:layout_below="@+id/d10layout">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/d20"
-        android:layout_below="@id/d10"/>
+        android:text="@string/d20"/>
 
-    <!-- d100 -->
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/d100"
-        android:layout_below="@id/d20"/>
+        android:id="@+id/d20view"
+        android:text="@string/blank"/>
+
+    </LinearLayout>
+    <!-- d100 -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/d100layout"
+        android:layout_below="@+id/d20layout">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/d100"
+            android:text="@string/d100"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/d100view"
+            android:text="@string/blank"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
