--- a/app/src/main/res/layout/content_gurps_navigator.xml
+++ b/app/src/main/res/layout/content_gurps_navigator.xml
@@ -48,7 +48,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/soundboard"
+        android:text="@string/loot"
         android:id="@+id/loot"
         android:layout_below="@+id/monster"
         android:layout_alignParentLeft="true"
